--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Freedom",
+  "name": "BreakupBuddy",
   "description": "Nobody wants to see their ex",
   "version": "1.0",
   "icons": {},
